Fix for damage rolls
They were being prepended which messed up damage options being toggled off

--- a/src/ui/components/alpha-strike-play-card.scss
+++ b/src/ui/components/alpha-strike-play-card.scss
@@ -474,17 +474,16 @@
             &.button-group {
                 gap: 0;
             }
-            .column + .column {
-                // margin-left: 8px;
-            }
         }
         .data-pair {
             &.fancy {
                 font-size: 2rem;
                 line-height: 1.8rem;
+                color: #dfab2d;
                 span {
                     font-size: .8rem;
                     line-height: 1.2rem;
+                    color: black;
                 }
             }
         }
